# object-detection-processor

./: README.md  pyproject.toml
object_detection_processor/: app.py
