[tool.poetry]
name = "object-detection-processor"
version = "0.1.0"
description = ""
authors = ["Alexander Sommer <xancoder@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ultralytics = "^8.0.207"
streamlit = "^1.28.1"
filetype = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
